--- a/SortingAlgorithmsDemo/MainWindow.xaml
+++ b/SortingAlgorithmsDemo/MainWindow.xaml
@@ -19,6 +19,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="135"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <Border
@@ -183,6 +184,15 @@
                         Text="End algorithm"/>
                 </Button>
             </StackPanel>
+        </StackPanel>
+
+        <StackPanel
+            Grid.Row="2"
+            Style="{StaticResource baseStackPanel}"
+            Orientation="Horizontal">
+            <TextBlock
+                Visibility="{Binding HasMessage, Converter={StaticResource booleanToVisibilityConverter}}"
+                Text="{Binding Message}"/>
         </StackPanel>
     </Grid>
 </Window>
